--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -7,8 +7,8 @@
     </trust-anchors>
   </base-config>
 
-  <domain-config cleartextTrafficPermitted="true">
-    <domain includeSubdomains="true">192.168.0.100</domain>
+  <domain-config cleartextTrafficPermitted="false">
+    <domain includeSubdomains="true">api.synsa.com.py</domain>
     <trust-anchors>
       <certificates src="system" />
     </trust-anchors>
