--- a/src/app/paginas/menu/menu.page.scss
+++ b/src/app/paginas/menu/menu.page.scss
@@ -1,3 +1,15 @@
+.title-gradient {
+  background: linear-gradient(to right, #3880ff, #4dd0e1); // azul Ionic a celeste moderno
+  --ion-color-primary: transparent;
+  color: white;
+  text-align: center;
+}
+
+ion-header {
+  --background: transparent; // fondo transparente para el header
+  --ion-background-color: transparent; // asegura que el fondo sea transparente
+}
+
 .header-logo {
   width: 100%;
   height: 100px;  // reducido para ocupar menos alto
