--- a/src/app/paginas/welcome/welcome.page.html
+++ b/src/app/paginas/welcome/welcome.page.html
@@ -1,14 +1,14 @@
 <ion-content class="ion-padding ion-text-center" style="background: linear-gradient(to bottom, #E3F2FD, #BBDEFB);">
   <!-- Fondo con líneas sutiles -->
-  <div class="background-lines" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.1) 25%, transparent 25%, transparent 75%, rgba(255, 255, 255, 0.1) 75%), linear-gradient(45deg, rgba(255, 255, 255, 0.1) 25%, transparent 25%, transparent 75%, rgba(255, 255, 255, 0.1) 75%); background-size: 40px 40px; z-index: -1;"></div>
   
   <!-- Contenedor del logo -->
   <div class="logo-container" style="width: 100%; overflow: hidden;">
-    <img src="../../../assets/img/logo.png" class="logo" style="width: 100%; height: auto; object-fit: contain; border-bottom: 10px solid #0D47A1; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);" />
+    <img src="../../../assets/img/logo.jpg" class="logo" style="width: 100%; height: auto; object-fit: contain; border-bottom: 10px solid #0D47A1; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);" />
   </div>
 
   <!-- Contenedor principal de la pantalla -->
   <div class="container" style="padding: 20px; margin-top: 30px;">
+ 
     <div>
       <h2 style="font-size: 2em; color: #0D47A1; font-weight: bold;">Bienvenido</h2>
       <p style="font-size: 1.2em; color: #607D8B;">Disfrute de su visita</p>
