--- a/src/app/paginas/configuracion/configuracion/configuracion.page.html
+++ b/src/app/paginas/configuracion/configuracion/configuracion.page.html
@@ -42,6 +42,14 @@
             <ion-input type="number" [(ngModel)]="config.sucursal" name="sucursal" required></ion-input>
           </ion-item>
         </ion-col>
+
+        <ion-col size-lg="6" size-md="6" size-sm="6" size="12">
+          <ion-item class="custom-item">
+            <ion-label position="floating">Cobrador</ion-label>
+            <ion-input type="number" [(ngModel)]="config.cobrador" name="cobrador" required></ion-input>
+          </ion-item>
+        </ion-col>
+
       </ion-row>
     </ion-grid>
 
